--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "run": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tsc": "tsc ."
   },
   "repository": {
     "type": "git",
@@ -23,11 +24,28 @@
   "bugs": {
     "url": "https://github.com/fluidnext/electron-polymer-cli/issues"
   },
+  "engines": {
+    "node": ">=8.16.0"
+  },
   "homepage": "https://github.com/fluidnext/electron-polymer-cli#readme",
   "dependencies": {
     "chalk": "^2.4.2",
     "clear": "^0.1.0",
     "commander": "^2.20.0",
-    "figlet": "^1.2.3"
+    "figlet": "^1.2.3",
+    "semver": "^6.2.0",
+    "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.6",
+    "chai": "^4.2.0",
+    "cross-env": "^5.2.0",
+    "jest": "^24.5.0",
+    "mocha": "^6.0.2",
+    "ts-jest": "^24.0.0",
+    "ts-node": "^8.0.3",
+    "typescript": "^3.3.3333"
+  },
+  "devDependencies": {
+    "@types/node": "^12.0.12",
+    "polymer-cli": "^1.9.10"
   }
 }
