--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "electron-polymer-cli",
   "version": "1.0.0",
   "description": "Tool writed with node, used to create module for the player",
-  "main": "index.js",
+  "main": "bin/electron-polymer.js",
+  "bin": {
+    "ep-cli": "bin/electron-polymer.js"
+  },
   "scripts": {
-    "run": "node index.js",
+    "run": "node bin/electron-polymer.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tsc": "tsc ."
+    "tsc": "tsc"
   },
   "repository": {
     "type": "git",
