--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,12 @@
 
 {
   "compilerOptions": {
-    "module": "esnext",
-    "target": "es2019",
-    "moduleResolution": "node",
-    "outDir": ".",
-    "rootDir" : ".",
+    "module": "commonjs",
+    "target": "es2018",
+    "outDir": "lib",
+    "rootDir" : "src",
     "lib": [
-      "es2019",
+      "es2018",
       "dom",
       "es6",
       "es5"
@@ -15,5 +14,8 @@
   },
   "exclude": [
     "node_modules"
+  ],
+  "include": [
+    "src/**/*"
   ]
 }
